Correction/Istio/installation-routing/web-dr-vs-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  gateways:
  - istio-system/http-gateway
  hosts:
  - "hello.wescale.fr"
  http:
  - route:
    - destination:
        host: web
        port:
          number: 8080        
        subset: v1
      weight: 90
    - destination:
        host: web
        port:
          number: 8080        
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-dr
spec:
  host: "web"
  subsets:
  - name: v1
    labels:
      app: hello
      run: web1
      version: v1
  - name: v2
    labels:
      app: helloe
      run: web2
      version: v2
